--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.11.7",
-    "@strapi/plugin-users-permissions": "4.11.7",
+    "@strapi/plugin-documentation": "^4.11.7",
     "@strapi/plugin-i18n": "4.11.7",
+    "@strapi/plugin-users-permissions": "4.11.7",
+    "@strapi/strapi": "4.11.7",
     "pg": "8.8.0"
   },
   "author": {
