--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-documentation": "^4.11.7",
     "@strapi/plugin-i18n": "4.11.7",
     "@strapi/plugin-users-permissions": "4.11.7",
     "@strapi/strapi": "4.11.7",
-    "pg": "8.8.0"
+    "mysql": "^2.18.1",
+    "pg": "8.8.0",
+    "strapi-plugin-ratings": "^1.1.9"
   },
   "author": {
     "name": "A Strapi developer"
