--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd /var/www/html/run-backend/
-          git pull
-          npm install
-          pm2 restart all
+          sudo git pull
+          sudo npm install
+          pm2 restart 0
