--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@strapi/plugin-documentation": "^4.11.7",
+    "@strapi/plugin-graphql": "^4.16.2",
     "@strapi/plugin-i18n": "4.11.7",
     "@strapi/plugin-users-permissions": "4.11.7",
     "@strapi/strapi": "4.11.7",
     "mysql": "^2.18.1",
     "pg": "8.8.0",
+    "strapi-auto-uuid": "^0.0.8",
     "strapi-plugin-ratings": "^1.1.9"
   },
   "author": {
